added swagger documentation and updated env

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,16 @@
+JWT_SECRET=tosif@123
+
+# main.go environment variable started
+
 PORT=8080
 DATABASE_URL=postgres://postgres:Tosif@123@localhost:5432/instagram?sslmode=disable
-JWT_SECRET=tosif@123
 ENVIRONMENT=development
+
+DB_MAX_IDLE_CONNS=25
+DB_MAX_OPEN_CONNS=200
+DB_CONN_MAX_LIFETIME=30 #30m
+DB_CONN_MAX_IDLE_TIME=10 #10m
+
+READ_TIMEOUT=15s
+WRITE_TIMEOUT=15s
+IDLE_TIMEOUT=60s
