add the files variable to .env file

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,19 @@
-JWT_SECRET=tosif@123
+# Rate limiting configuration
+RATE_LIMIT_REQUESTS_PER_SECOND=10
+
+# JWT configuration
+JWT_SECRET=your-secret-key-here
+JWT_EXPIRY_DAYS=7
+
+# Cache configuration
+CACHE_TTL_SECONDS=300
+
+# Password hashing configuration
+PASSWORD_HASH_COST=10
+
+# Redis cache key prefixes
+REDIS_CACHE_PREFIX_POSTS="posts:page:"
+REDIS_CACHE_PREFIX_USER="user:"
 
 # main.go environment variable started
 
@@ -14,3 +29,17 @@ DB_CONN_MAX_IDLE_TIME=10 #10m
 READ_TIMEOUT=15s
 WRITE_TIMEOUT=15s
 IDLE_TIMEOUT=60s
+
+# Redis Configuration
+REDIS_POOL_SIZE=100
+REDIS_MIN_IDLE_CONNS=10
+REDIS_MAX_RETRIES=3
+REDIS_DIAL_TIMEOUT=5
+REDIS_READ_TIMEOUT=3
+REDIS_WRITE_TIMEOUT=3
+REDIS_POOL_TIMEOUT=4
+
+# Redis Cache Configuration
+REDIS_POST_CACHE_PREFIX=post:
+REDIS_USER_CACHE_PREFIX=user:
+REDIS_CACHE_EXPIRATION=30
