spliting the codebases for better readability

--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@
 RATE_LIMIT_REQUESTS_PER_SECOND=10
 
 # JWT configuration
-JWT_SECRET=your-secret-key-here
+JWT_SECRET=Tosif@123
 JWT_EXPIRY_DAYS=7
 
 # Cache configuration
